--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container">
-      <a class="navbar-brand" style="font-family: 'Marck Script', cursive; font-weight: 600; font-size: 3rem;">Eat & Repeat</a>
+      <a class="navbar-brand" style="font-family: 'Marck Script', cursive; font-weight: 600; font-size: 3rem;" href="/index.html">Eat & Repeat</a>
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
